adding todos from user interface

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,19 +1,28 @@
 {% extends "base.html" %}
 
 {% block contant %}
-<div class="container ">
+<div class="container text-center">
+    {% if msg %}
+        <div class="alert alert-success" role="alert">
+            {{msg}}
+        </div>
+    {% endif %}
     <h1>Login Here</h1>
-    <form>
+        {% for error in errors %}
+			<div class="alert alert-danger" role="alert">
+				{{ error }}
+			</div>
+		{% endfor %}
+    <form method="POST">
         <div class="mb-3">
             <label for="email" class="form-label">Email address</label>
-            <input type="email" required class="form-control" name="email" aria-describedby="emailHelp">
+            <input type="email" required class="form-control" name="email" aria-describedby="emailHelp" placeholder="Enter Your Email Here">
         </div>
         <div class="mb-3">
             <label for="password" class="form-label">Password</label>
-            <input type="password" required class="form-control" name="password">
+            <input type="password" required class="form-control" name="password" placeholder="Enter Your Password Here">
         </div>
-        <button class="btnn"><a href="login.html">Login</a></button>
-        <!-- <button type="login" class="btn btn-primary">Login</button> -->
+        <button type="submit" class="btn btn-primary">Login</button>
         <p class="link">Don't have an account<br>
         <a href="signup.html">Sign up </a> here</a></p>
     </form>
