--- a/templates/todos.html
+++ b/templates/todos.html
@@ -8,8 +8,8 @@
             </div>
             <div class="menu">
                 <ul>
-                    <li><a href="#">ADD TODOS</a></li>
-                    <li><a href="#">SEE TODOS</a></li>
+                    <li><a href="/create-a-todo.html">CREATE A TODOS</a></li>
+                    <li><a href="see-todo.html">SEE TODOS</a></li>
                 </ul>
             </div>
         </div>
