--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -13,7 +13,7 @@
             <a class="nav-link" href="/docs/">Docs</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/signup.html/">signup</a>
+            <a class="nav-link" href="/signup.html">signup</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/">login</a>
