--- a/templates/todos.html
+++ b/templates/todos.html
@@ -2,16 +2,14 @@
 
 {% block contant %}
     <div class="container text-center">
-        <div class="main">
-            <div class="icon">
-                <h2 class="logo">MY TODOS</h2>
-            </div>
-            <div class="menu">
-                <ul>
-                    <li><a href="/create-a-todo.html">CREATE A TODOS</a></li>
-                    <li><a href="see-todo.html">SEE TODOS</a></li>
-                </ul>
-            </div>
+        <div class="icon">
+            <h2 class="logo">MY TODOS</h2>
+        </div>
+        <div class="menu">
+            <ul>
+                <li><a href="/creatatodo.html">CREATE A TODOS</a></li>
+                <li><a href="/seetodo.html">SEE TODOS</a></li>
+            </ul>
         </div>
     </div>
 {% endblock %}
