user interface is enhanced
all pages are ready

--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,10 @@
 </head>
 
 <body>
+    <div class="p-5 bg-primary text-white text-center">
+        <h1>Chat2Do</h1>
+        <p>Check Upon Your Todos And Join The ChatRoom</p> 
+    </div>
     {% include 'navbar.html' %}
     {% block contant %}
     {% endblock %}
