--- a/templates/chat.html
+++ b/templates/chat.html
@@ -7,8 +7,8 @@
         </div>
         <div class="menu">
             <ul>
-                <li><a href="#">PRIVATE CHAT</a></li>
-                <li><a href="#">GROUP CHAT</a></li>
+                <li><a href="/private.html">PRIVATE CHAT</a></li>
+                <li><a href="/groupchat.html">GROUP CHAT</a></li>
             </ul>
         </div>
     </div>
