--- a/templates/private.html
+++ b/templates/private.html
@@ -8,8 +8,8 @@
 		    	<input type="email" class="form-control" required name="to" placeholder="enter the reciver email">
             </div>
             <div class="mb-3">
-                <label for="massage" class="form-label">Contant</label>
-    			<textarea class="form-control" required name="massage" placeholder="Enter the text"></textarea>
+                <label for="message" class="form-label">Contant</label>
+    			<textarea class="form-control" required name="message" placeholder="Enter the text"></textarea>
             </div>
             <button type="submit" class="btn btn-primary">Send</button>
         </form>
