--- a/templates/todos.html
+++ b/templates/todos.html
@@ -8,7 +8,7 @@
         <div class="menu">
             <ul>
                 <li><a href="/creatatodo.html">CREATE A TODOS</a></li>
-                <li><a href="/seetodo.html">SEE TODOS</a></li>
+                <li><a href="/seetodos.html">SEE TODOS</a></li>
             </ul>
         </div>
     </div>
