--- a/templates/creatatodo.html
+++ b/templates/creatatodo.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block contant %}
     <div class="container text-center">
-        <h1>Creat Todo Here</h1>
+        <h1>Create Todo Here</h1>
         <form  method="POST">
             <div class="mb-3">
                 <label for="title" class="form-label">Todo Title</label>
@@ -12,7 +12,7 @@
     			<textarea class="form-control" required name="description" placeholder="Enter todo description"></textarea>
 				<div class="form-text">Describe all details about todos</div>
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary">Create</button>
         </form>
     </div>
 {% endblock %}
