--- a/templates/base.html
+++ b/templates/base.html
@@ -10,9 +10,8 @@
 <body>
     <div class="p-5 bg-primary text-white text-center">
         <h1>Chat2Do</h1>
-        <p>Check Upon Your Todos And Join The ChatRoom</p> 
+        <p>Check Out Your Todos And Join The ChatRoom</p> 
     </div>
-    {% include 'navbar.html' %}
     {% block contant %}
     {% endblock %}
     <script>
