--- a/templates/chat.html
+++ b/templates/chat.html
@@ -2,13 +2,16 @@
 
 {% block contant %}
     <div class="container text-center">
+        {% include 'navbar2.html' %}
         <div class="icon">
             <h2 class="logo">CHATROOM</h2>
         </div>
         <div class="menu">
             <ul>
                 <li><a href="/private.html">PRIVATE CHAT</a></li>
+                <li><a href="/seeprivatechat.html">SEE PRIVATE CHAT</a></li>
                 <li><a href="/groupchat.html">GROUP CHAT</a></li>
+                <li><a href="/seegroupchat.html">SEE GROUP CHAT</a></li>
             </ul>
         </div>
     </div>
