--- a/templates/groupchat.html
+++ b/templates/groupchat.html
@@ -1,11 +1,12 @@
 {% extends "base.html" %}
 {% block contant %}
     <div class="container text-center">
+        {% include 'navbar2.html' %}
         <h1>Group Chat Here</h1>
         <form  method="POST">
             <div class="mb-3">
-                <label for="massage" class="form-label">Contant</label>
-    			<textarea class="form-control" required name="massage" placeholder="Enter the text"></textarea>
+                <label for="message" class="form-label">Text</label>
+    			<textarea class="form-control" required name="message" placeholder="Enter the text"></textarea>
             </div>
             <button type="submit" class="btn btn-primary">Send</button>
         </form>
