--- a/templates/todos.html
+++ b/templates/todos.html
@@ -2,13 +2,14 @@
 
 {% block contant %}
     <div class="container text-center">
+        {% include 'navbar2.html' %}
         <div class="icon">
             <h2 class="logo">MY TODOS</h2>
         </div>
         <div class="menu">
             <ul>
-                <li><a href="/creatatodo.html">CREATE A TODOS</a></li>
-                <li><a href="/seetodos.html">SEE TODOS</a></li>
+                <li><a href="/creatatodo.html">CREATE TODO</a></li>
+                <li><a href="/seetodos.html">SEE TODO</a></li>
             </ul>
         </div>
     </div>
