--- a/templates/card.html
+++ b/templates/card.html
@@ -1,7 +1,19 @@
-<div class="card" style="width: 18rem;">
-    <div class="card-body border border-warning rounded">
-      <h5 class="card-title">{{ todo.title }}</h5>
-      <p class="card-text">{{ todo.description }}</p>
-      <a href="/detail/{{obj.id}}/" class="btn btn-primary">Read More</a>
+{% extends "base.html" %}
+{% block contant %}
+    <div class="container text-center">
+        <h1>See Todos Here</h1>
+        <div class="row">
+            {% for item in todos_in_db %}
+                <div class="col">
+                  <div class="card" style="width: 18rem;">
+                    <div class="card-body">
+                      <h5 class="card-title">{{item.1}}</h5>
+                      <p class="card-text">{{item.2}}</p>
+                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                  </div>
+                </div> 
+            {% endfor %}
+        </div>
     </div>
-  </div>
+{% endblock %}
