--- a/templates/home.html
+++ b/templates/home.html
@@ -15,16 +15,16 @@
 		{% endfor %}
     <form method="POST">
         <div class="mb-3">
-            <label for="email" class="form-label">Email address</label>
-            <input type="email" required class="form-control" name="email" aria-describedby="emailHelp" placeholder="Enter Your Email Here">
+            <label for="username" class="form-label">Email address</label>
+            <input type="email" required class="form-control" name="username" aria-describedby="emailHelp" placeholder="Enter Your Email Here">
         </div>
         <div class="mb-3">
             <label for="password" class="form-label">Password</label>
             <input type="password" required class="form-control" name="password" placeholder="Enter Your Password Here">
         </div>
-        <button type="submit" class="btn btn-primary">Login</button>
+        <button type="submit" class="btn btn-primary">LOGIN</button>
         <p class="link">Don't have an account<br>
-        <a href="signup.html">Sign up </a> here</a></p>
+        <a href="signup.html">SIGNUP</a> here</a></p>
     </form>
 </div>
 {% endblock %}
