check box added in todo table

--- a/templates/afterlogin.html
+++ b/templates/afterlogin.html
@@ -13,8 +13,8 @@
     </div>
     <div class="menu">
         <ul>
-            <li><a href="todos.html">TODO</a></li>
-            <li><a href="chat.html">CHAT</a></li>
+            <li><a href="/todo">TODO</a></li>
+            <li><a href="/chat">CHAT</a></li>
         </ul>
     </div> 
 </div>
