--- a/templates/home.html
+++ b/templates/home.html
@@ -24,7 +24,7 @@
         </div>
         <button type="submit" class="btn btn-primary">LOGIN</button>
         <p class="link">Don't have an account<br>
-        <a href="signup.html">SIGNUP</a> here</a></p>
+        <a href="/signup">SIGNUP</a> here</a></p>
     </form>
 </div>
 {% endblock %}
