--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -10,7 +10,7 @@
           <a class="nav-link" href="/docs/">DOCS</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/">LOGIN</a>
+          <a class="nav-link" href="/login">LOGIN</a>
         </li>
       </ul>
     </div>
