--- a/templates/navbar2.html
+++ b/templates/navbar2.html
@@ -7,10 +7,10 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link" href="/todos.html">TODO</a>
+            <a class="nav-link" href="/todo">TODO</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/chat.html">CHAT</a>
+            <a class="nav-link" href="/chat">CHAT</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/logout">LOGOUT</a>
