--- a/templates/seetodos.html
+++ b/templates/seetodos.html
@@ -25,7 +25,12 @@
                     <th scope="row">{{ item.id }}</th>
                     <td>{{item.tittle}}</td>
                     <td>{{item.description}}</td>
-                    <td><button type="submit" class="btn btn-success">In Progress</button></td>
+                    <td><div class="form-check">
+                        <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked">
+                        <label class="form-check-label" for="flexCheckChecked">
+                          is done
+                        </label>
+                      </div></td>
                 </tr>   
                 {% endfor %}
             </tbody>
