--- a/templates/navbar2.html
+++ b/templates/navbar2.html
@@ -16,7 +16,11 @@
             <a class="nav-link" href="/logout">LOGOUT</a>
           </li>
         </ul>
+        <ul class="navbar-nav pull-right">
+          <a class="navbar-brand" >{{username}}</a>
+        </ul>
       </div>
     </div>
   </nav>
+ 
  
