--- a/templates/seeprivatechat.html
+++ b/templates/seeprivatechat.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>chat</title>
-    <!-- <link rel="stylesheet" href="/static/chat.css"> -->
+    <link rel="stylesheet" href="/static/chat.css">
 </head>
 <body>
 	<div id="container">
