--- a/templates/seetodos.html
+++ b/templates/seetodos.html
@@ -25,6 +25,7 @@
                     <th scope="row">{{ item.id }}</th>
                     <td>{{item.tittle}}</td>
                     <td>{{item.description}}</td>
+                    <!-- <button class="btn btn-danger" onclick="delete_item({{item.id}})">Delete</button> -->
                     <td><div class="form-check">
                         <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked">
                         <label class="form-check-label" for="flexCheckChecked">
