enhancing the app for easy use

--- a/templates/chat.html
+++ b/templates/chat.html
@@ -8,10 +8,9 @@
         </div>
         <div class="menu">
             <ul>
-                <li><a href="/private.html">PRIVATE CHAT</a></li>
-                <li><a href="/seeprivatechat.html">SEE PRIVATE CHAT</a></li>
-                <li><a href="/groupchat.html">GROUP CHAT</a></li>
-                <li><a href="/seegroupchat.html">SEE GROUP CHAT</a></li>
+                <li><a href="/privatechat">PRIVATE CHAT</a></li>
+                <li><a href="/seeprivatechat">SEE PRIVATE CHAT</a></li>
+                <li><a href="/groupchat">GROUP CHAT</a></li>
             </ul>
         </div>
     </div>
