--- a/templates/creatatodo.html
+++ b/templates/creatatodo.html
@@ -7,23 +7,48 @@
                 {{msg}}
             </div>
         {% endif %}
-        <h1>Create Todo Here</h1>
         {% for error in errors %}
 			<div class="alert alert-danger" role="alert">
 				{{ error }}
 			</div>
         {% endfor %}
-        <form  method="POST">
+        <h3>Todo List</h3>
+        <table class="table">
+            <thead>
+              <tr>
+                <th scope="col">Todo ID</th>
+                <th scope="col">Tittle</th>
+                <th scope="col">Description</th>
+                <th scope="col">status</th>
+              </tr>
+            </thead>
+            <tbody>
+                {% for item in todos_in_db %}
+                <tr>
+                    <th scope="row">{{ item.id }}</th>
+                    <td>{{item.tittle}}</td>
+                    <td>{{item.description}}</td>
+                    <td>
+                        <div class="form-check">
+                        <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked">
+                        <label class="form-check-label" for="flexCheckChecked">
+                          is done
+                        </label>
+                      </div>
+                    </td>
+                </tr>   
+                {% endfor %}
+            </tbody>
+        </table>
+        <h3>Create Todo</h3>
+        <form  method="POST" id="form2">
             <div class="mb-3">
-                <label for="tittle" class="form-label">Todo Tittle</label>
 		    	<input type="text" class="form-control" required name="tittle" placeholder="Enter tittle">
             </div>
             <div class="mb-3">
-                <label for="description" class="form-label">Todo Description</label>
     			<textarea class="form-control" required name="description" placeholder="Enter todo description"></textarea>
-				<div class="form-text">Describe all details about todos</div>
             </div>
-            <button type="submit" class="btn btn-primary">Create</button>
+            <button type="submit"  form="form2" class="btn btn-primary">Create</button>
         </form>
     </div>
 {% endblock %}
