--- a/templates/seegroupchat.html
+++ b/templates/seegroupchat.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Webpage Design</title>
+    <title>Group Chat</title>
     <link rel="stylesheet" href="/static/chat.css">
 </head>
 <body>
@@ -9,7 +9,7 @@
 		<main>
 			<header>
 				<div>
-					<h2>CHAT ROOM</h2>
+					<h2>GROUP CHAT</h2>
 				</div>
 			</header>
 			<ul id="chat">
@@ -36,7 +36,6 @@
 			</ul>
 			<form  method="POST">
 				<div class="mb-3">
-					<label for="message" class="form-label">Text</label>
 					<textarea class="form-control" required name="message" placeholder="Enter the text"></textarea>
 				</div>
 				<button type="submit" class="btn btn-primary">Send</button>
