--- a/templates/todos.html
+++ b/templates/todos.html
@@ -8,8 +8,8 @@
         </div>
         <div class="menu">
             <ul>
-                <li><a href="/creatatodo.html">CREATE TODO</a></li>
-                <li><a href="/seetodos.html">SEE TODO</a></li>
+                <li><a href="/creatatodo">CREATE TODO</a></li>
+                <li><a href="/seetodos">SEE TODO</a></li>
             </ul>
         </div>
     </div>
