--- a/templates/seetodos.html
+++ b/templates/seetodos.html
@@ -21,7 +21,7 @@
                     <td>
                       <form  method="POST">
                         <div class="mb-3">
-                          <input required name="id" value="{{ item.id }}" >
+                          <input type="hidden" required name="id" value="{{ item.id }}" >
                         </div>
                         <button type="submit" class="btn btn-primary">Completed</button>
                       </form>
