--- a/templates/chat.html
+++ b/templates/chat.html
@@ -5,12 +5,20 @@
         {% include 'navbar2.html' %}
         <div class="icon">
             <h2 class="logo">CHATROOM</h2>
+            <br>
         </div>
         <div class="menu">
             <ul>
-                <li><a href="/privatechat">PRIVATE CHAT</a></li>
-                <li><a href="/seeprivatechat">SEE PRIVATE CHAT</a></li>
+                {% for item in users_in_db %}
+                <form  method="POST">
+                    <div class="mb-3">
+                        <input type="hidden" required name="username" value="{{item.username}}" >
+                    </div>
+                    <button type="submit" class="btn btn-primary">{{item.username}}</button>
+                </form>
+                {% endfor %}
                 <li><a href="/groupchat">GROUP CHAT</a></li>
+                <li><a href="/privatechat">PRIVATE CHAT</a></li>
             </ul>
         </div>
     </div>
