--- a/templates/login.html
+++ b/templates/login.html
@@ -4,7 +4,7 @@
 <div class="container text-center">
     <div class="main">
         <div class="icon">
-            <h2 class="logo">MY APP</h2>
+            <h2 class="logo">MY APP 1</h2>
         </div>
         <div class="menu">
             <ul>
