--- a/templates/seeprivatechat.html
+++ b/templates/seeprivatechat.html
@@ -9,7 +9,7 @@
 		<main>
 			<header>
 				<div>
-					<h2>CHAT ROOM</h2>
+					<h2>to:  {{to}}</h2>
 				</div>
 			</header>
 			<ul id="chat">
@@ -27,10 +27,6 @@
 				</li>
 				<li class="me">
 					{% for item in text_by_in_private %}
-						<div class="entete">
-							<span class="status green"></span>
-							<h3>{{item.to}}</h3>
-						</div>
 						<div class="triangle"></div>
 						<div class="message">
 							{{item.message}}
@@ -40,7 +36,7 @@
 			</ul>
 			<form  method="POST">
 				<div class="mb-3">
-					<input type="email" class="form-control" required name="to" placeholder="enter the reciver email">
+					<input type="hidden" required name="to" value="{{to}}" placeholder="enter the reciver email">
 				</div>
 				<div class="mb-3">
 					<textarea class="form-control" required name="message" placeholder="Enter the text"></textarea>
