--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,28 +1,34 @@
 {% extends "base.html" %}
 {% block contant %}
     <div class="container text-center">
-        {% include 'navbar.html' %}
         {% if msg %}
             <div class="alert alert-success" role="alert">
                 {{msg}}
             </div>
         {% endif %} 
+        <br>
         <h1>Signup Here</h1>
             {% for error in errors %}
 			    <div class="alert alert-danger" role="alert">
 					{{ error }}
 				</div>
 			{% endfor %}
+            <br>
         <form  method="POST">
             <div class="mb-3">
                 <label for="email" class="form-label">Email address</label>
                 <input type="email" required class="form-control" name="email" aria-describedby="emailHelp" placeholder="Enter Your Email Here">
             </div>
+            <br>
             <div class="mb-3">
                 <label for="password" class="form-label">Password</label>
                 <input type="password" required class="form-control" name="password" placeholder="Enter Your Password Here">
             </div>
+            <br>
             <button type="submit" class="btn btn-primary">Registor</button>
+            <br>
+            <p class="link">Already have an account<br>
+            <a href="/">LOGIN</a> here</a></p>
         </form>
     </div>
 {% endblock %}
